Combobox: prevent group label obscuring scrollbar on iOS

--- a/docs/src/app/(docs)/react/components/combobox/demos/grouped/css-modules/index.module.css
+++ b/docs/src/app/(docs)/react/components/combobox/demos/grouped/css-modules/index.module.css
@@ -133,7 +133,11 @@
 
 .GroupLabel {
   box-sizing: border-box;
+  position: sticky;
+  z-index: 1;
+  top: 0;
   padding: 0.5rem 0.5rem 0.25rem 1.75rem;
+  margin: 0 0.5rem 0 0; /* Prevent overlap with iOS overlay scrollbars. */
   font-size: 0.75rem;
   font-weight: 700;
   line-height: 1rem;
@@ -141,9 +145,6 @@
   text-transform: uppercase;
   letter-spacing: 0.05em;
   background-color: light-dark(white, var(--color-neutral-950));
-  position: sticky;
-  z-index: 1;
-  top: 0;
 }
 
 .Item {
